letter spacing fix

--- a/web/themes/custom/athex/css/views/views.scss
+++ b/web/themes/custom/athex/css/views/views.scss
@@ -85,6 +85,14 @@ body.befs-open {
 			letter-spacing: 1.92px;
 			color: white;
 		}
+
+		p {
+			font-size: 16px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: 24px;
+			letter-spacing: 0.48px;
+		}
 	}
 }
 
